@@ -38,6 +38,52 @@ bool has_control_characters(const string &name)
 static be13::hash_def hasher;
 
 /**
+ * code from tsk3
+ */
+
+/* We have a private version of these #include files in case the system one is not present */
+#pragma GCC diagnostic ignored "-Wshadow"
+#pragma GCC diagnostic ignored "-Weffc++"
+#pragma GCC diagnostic ignored "-Wredundant-decls"
+#include "tsk3/libtsk.h"
+#include "tsk3/fs/tsk_fatfs.h"
+#include "tsk3/fs/tsk_ntfs.h"
+#pragma GCC diagnostic warning "-Wshadow"
+#pragma GCC diagnostic warning "-Weffc++"
+#pragma GCC diagnostic warning "-Wredundant-decls"
+//using namespace std;
+
+
+inline uint16_t fat16int(const uint8_t buf[2]){
+    return buf[0] | (buf[1]<<8);
+}
+
+inline uint32_t fat32int(const uint8_t buf[4]){
+    return buf[0] | (buf[1]<<8) | (buf[2]<<16) | (buf[3]<<24);
+}
+
+inline uint32_t fat32int(const uint8_t high[2],const uint8_t low[2]){
+    return low[0] | (low[1]<<8) | (high[0]<<16) | (high[1]<<24);
+}
+
+
+inline int fatYear(int x){  return (x & FATFS_YEAR_MASK) >> FATFS_YEAR_SHIFT;}
+inline int fatMonth(int x){ return (x & FATFS_MON_MASK) >> FATFS_MON_SHIFT;}
+inline int fatDay(int x){   return (x & FATFS_DAY_MASK) >> FATFS_DAY_SHIFT;}
+inline int fatHour(int x){  return (x & FATFS_HOUR_MASK) >> FATFS_HOUR_SHIFT;}
+inline int fatMin(int x){   return (x & FATFS_MIN_MASK) >> FATFS_MIN_SHIFT;}
+inline int fatSec(int x){   return (x & FATFS_SEC_MASK) >> FATFS_SEC_SHIFT;}
+
+inline std::string fatDateToISODate(const uint16_t d,const uint16_t t)
+{
+    char buf[256];
+    snprintf(buf, sizeof(buf), "%04d-%02d-%02dT%02d:%02d:%02d",
+	     fatYear(d)+1980,fatMonth(d),fatDay(d),
+	     fatHour(t),fatMin(t),fatSec(t)); // local time
+    return std::string(buf);
+}
+
+/**
  * given a location in an sbuf, determine if it contains a zip component.
  * If it does and if it passes validity tests, unzip and recurse.
  */
@@ -47,10 +93,11 @@ inline void scan_zip_component(const class scanner_params &sp,const recursion_co
     const sbuf_t &sbuf = sp.sbuf;
     const pos0_t &pos0 = sp.sbuf.pos0;
                 
+    /* Local file header */
     uint16_t version=sbuf.get16u(pos+4);
-    uint16_t compression_method=sbuf.get16u(pos+6);
-    uint16_t lastmodtime=sbuf.get16u(pos+8);
-    uint16_t lastmoddate=sbuf.get16u(pos+10);
+    uint16_t compression_method=sbuf.get16u(pos+8);
+    uint16_t lastmodtime=sbuf.get16u(pos+10);
+    uint16_t lastmoddate=sbuf.get16u(pos+12);
     uint32_t crc32=sbuf.get32u(pos+14);	/* not used needed */
     uint32_t compr_size=sbuf.get32u(pos+18);
     uint32_t uncompr_size=sbuf.get32u(pos+22);
@@ -77,10 +124,11 @@ inline void scan_zip_component(const class scanner_params &sp,const recursion_co
              "<zipinfo><name>%s</name>"
              "<version>%d</version><compression_method>%d</compression_method>"
              "<uncompr_size>%d</uncompr_size><compr_size>%d</compr_size>"
-             "<lastmodtime>%d</lastmodtime><lastmoddate>%d</lastmoddate><crc32>%u</crc32>"
+             "<mtime>%s</mtime><crc32>%u</crc32>"
              "<extra_field_len>%d</extra_field_len>",
-             name.c_str(),version,compression_method,uncompr_size,compr_size,lastmodtime,
-             lastmoddate,crc32,extra_field_len);
+             name.c_str(),version,compression_method,uncompr_size,compr_size,
+             fatDateToISODate(lastmoddate,lastmodtime).c_str(),
+             crc32,extra_field_len);
     stringstream xmlstream;
     xmlstream << b2;
 
