@@ -1,6 +1,6 @@
 #include "bulk_extractor.h"
-#include "threadpool.h"
 #include "image_process.h"
+#include "threadpool.h"
 #include "aftimer.h"
 
 #include <dirent.h>
@@ -128,6 +128,7 @@ threadpool::~threadpool()
 /** 
  * work is delivered in sbufs.
  * This blocks the caller if there are no free workers.
+ * Called from the threadpool master thread
  */
 void threadpool::schedule_work(sbuf_t *sbuf)
 {
@@ -156,6 +157,7 @@ int threadpool::get_free_count()
 
 /**
  * do the work. Record that the work was started and stopped in XML file.
+ * Called in the worker threads
  */
 bool worker::opt_work_start_work_end=true;
 void worker::do_work(sbuf_t *sbuf)
@@ -228,6 +230,9 @@ std::string threadpool::get_thread_status(uint32_t id)
 #endif
 void *worker::run() 
 {
+    /* Initialize any per-thread variables in the scanners */
+    be13::plugin::message_enabled_scanners(scanner_params::PHASE_THREAD_BEFORE_SCAN,0);
+
     while(true){
 	/* Get the lock, then wait for the queue to be empty.
 	 * If it is not empty, wait for the lock again.
